# internal/transport/rest/auth.go
@@ -6,6 +6,18 @@ import (
 	"net/http"
 )
 
+// @Summary SignUp
+// @Tags Auth
+// @Description user sign-up
+// @ID sign-up
+// @Accept  json
+// @Produce  json
+// @Param input body domain.SignUpInput true "User info"
+// @Success 200 {object} getCreationId
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /auth/sign-up [post]
 func (h *Handler) SignUp(c *gin.Context) {
 	var input domain.SignUpInput
 
@@ -20,11 +32,23 @@ func (h *Handler) SignUp(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusOK, map[string]interface{}{
-		"id": id,
+	c.JSON(http.StatusOK, getCreationId{
+		Id: id,
 	})
 }
 
+// @Summary SignIn
+// @Tags Auth
+// @Description user sign-in
+// @ID sign-in
+// @Accept  json
+// @Produce  json
+// @Param input body domain.SignInInput true "User info"
+// @Success 200 {object} getCreationToken
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /auth/sign-in [post]
 func (h *Handler) SignIn(c *gin.Context) {
 	var input domain.SignInInput
 
@@ -39,7 +63,7 @@ func (h *Handler) SignIn(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusOK, map[string]interface{}{
-		"token": token,
+	c.JSON(http.StatusOK, getCreationToken{
+		AccessToken: token,
 	})
 }
